# deep-research

./: .env.example  .gitignore  ADVANCED_FEATURES.md  Deep Research Technical Specification.docx  Deep Research User Requirement Specification.docx  FRONTEND_GUIDE.md  IMPLEMENTATION_NOTES.md  PROJECT_COMPLETION_SUMMARY.md  README.md  USAGE.md  __init__.py  api_server.py  app.py  dashboard.html  database.py  deepresearch.py  error_recovery.py  pyproject.toml  run_workflow.py  streamlit_app.py
.config/: config.yaml
agents/: deep_agents.py  enhancer_agent.py  factchecking_agent.py  formatting_agent.py  planning_agent.py  research_agent.py  review_agent.py  revision_agent.py  summary_agent.py  write_agent.py
docs/: Deep Research Technical Specification.md  Deep Research URS.md
frontend/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/app/history/: page.tsx
frontend/app/monitor/: page.tsx
frontend/components/: navigation.tsx  root-layout-client.tsx  theme-provider.tsx
frontend/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx  progress.tsx  tabs.tsx  textarea.tsx
frontend/lib/: api.ts  utils.ts
mcp_server/: document_server.py  research_server.py  server.py
models/: agent.py
notebooks/: LlamaIndex_agentic_workflows_Deep_Research_code_along.ipynb
test/: test_config.py  test_integration.py  test_websearch.py
test/.test_config/: test_config.yaml
test/integration/: test_workflows.py
tools/: __init__.py  context_tools.py  document_tools.py  literature_tools.py  registry.py  web_search.py
utils/: cache.py  config.py  load_config.py  logging.py  validation.py
