[project]
name = "deepresearch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.13",
    "anthropic>=0.54.0",
    "asyncio>=3.4.3",
    "duckduckgo-search>=8.0.4",
    "fastapi>=0.104.0",
    "gradio[mcp]>=5.34.0",
    "jinja2>=3.0.0",
    "llama-index>=0.12.42",
    "llama-index-tools-mcp>=0.2.5",
    "llama-index-tools-valyu>=0.2.0",
    "llama-index-tools-wikipedia>=0.3.0",
    "llama-index-tools-wolfram-alpha>=0.3.0",
    "llama-index-utils-workflow>=0.3.3",
    "nebius>=0.2.34",
    "openai>=1.86.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "python-dotenv>=1.1.0",
    "requests>=2.31.0",
    "serpapi>=0.1.5",
    "streamlit>=1.30.0",
    "tavily-python>=0.7.6",
    "types-aiofiles>=24.1.0.20250606",
    "types-pyyaml>=6.0.12.20250516",
    "types-requests>=2.32.4.20250611",
    "uvicorn>=0.24.0",
]
